# flutter_ffi_template

./: .gitignore  pubspec.yaml  readme.md
example/: .gitignore  pubspec.yaml
example/lib/: base_test.dart  main.dart
lib/: bindings.dart  flutter_ffi_template.dart
src/: CMakeLists.txt  export.def
src/include/: dart_api.h
src/native/: common.cpp  common.h  export.cpp  export.h
windows/: CMakeLists.txt
